[project]
name = "eaw-tweaks"
version = "0.1.0"
description = "Library for building automatic tweaks for Empire at War"
readme = "README.md"
authors = [
    { name = "Zachary Stewart", email = "zachary.c.stewart@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.0.2",
    "petro-meg>=1.0.0",
]
license = "MIT"

[project.urls]
Repository = "https://github.com/zstewar1/eaw-tweaks"

[project.scripts]
eaw-tweaks = "eaw_tweaks:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["I"]
